Business and Data Understanding

--- a/student.ipynb
+++ b/student.ipynb
@@ -4,14 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Project Submission\n",
+    "* Student name: WILLIAM OMONDI NDONI\n",
+    "* Student pace:  full time "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Business Understanding\n",
+    "WON Real Estate Limited is a real estate company located in the American Northwest that buys and sells houses to its clients. The company would like to develop a model that can estimate the price of a house based on its features. In addition,the company would like to know which features best estimate the house prices.\n",
     "\n",
-    "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
-    "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
-    "* Blog post URL:\n"
+    "This project will help identify the features that can be used to provide a good estimate of the house prices.The project will also develop a model that can estimate the house prices and evaluate its performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data understanding\n",
+    "The data used in this project was obtained from [kaggle website](https://www.kaggle.com/datasets/shivachandel/kc-house-data). This dataset contains the prices of houses in the American Northwest and their various features such as,the number of bathrooms and the number of bedrooms.These are contained in the various columns of the dataset.\n",
+    "\n",
+    "The dataset contains twenty one columns that are the features(characteristics) of the houses.The main aim of this project is to estimate the prices of houses that are contained in the 'price' column.\n",
+    "This dataset will therefore be of use since the company is also in the Northwest."
    ]
   },
   {
@@ -19,9 +34,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here - remember to use markdown cells for comments as well!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -40,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
